# event-sourcing

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  Makefile  Makefile_old  README.md  README_old.md  compose.override.yml  compose.yml  cursor_creating_a_presentation_for_pyco.md  notes.md  package.json  presentation.md  pyproject.toml  sample_salesforce_event.json  test_event_driven_projections.py  test_event_flow.py
.cursor/rules/: anti-hallucination.mdc  makefile.mdc  mermaid-diagrams.mdc  python-code-documentation.mdc  python.mdc  testing.mdc
.devcontainer/: bashrc.override.sh  devcontainer.json
.envs/: .datadog  .fastapi  .localstack  .postgres
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: bump.yml  ci-pr.yml  ci.yml  periodic-precommit-updater.yml  precommit.yml  test.yml  update-precommit-deps.yml
compose/: entrypoint  start-celerybeat  start-celeryworker  start-local  start-production
diagrams/source/: architecture.mmd  cqrs-separation.mmd  debugging-superpowers.mmd  event-flow.mmd  event-replay.mmd  event-sourcing-flow.mmd  event-stream-sequence.mmd  eventual-consistency.mmd  user_changes_email.mmd
docs/: arch_options.md  critique.md  explicit_cqrs_event_sourcing.md  full_cqrs_event_sourcing_aggregate.md  gpt_critique.md  improvements.md  mistral_critique.md  mistral_critique_v1.md  notes.md  presentation.html  presentation.md  proposal.md
docs/code/: event-sourcing.md
docs/presentation/: presentation.md
docs/presentation/diagrams/source/: debugging-superpowers.mmd  event-sourcing-flow.mmd  event-stream-sequence.mmd
docs/presentation/other_docs/: chatgpt_proposal.md  critique_chatgpt_v2.md  critique_chatgpt_v3.md  proposal.md
localstack/scripts/: 0001_initial.sh  localstack-cf.yml
scripts/: initialize  migrate
src/event_sourcing/: README.md  enums.py  main.py
src/event_sourcing/api/: context.py  depends.py
src/event_sourcing/api/handlers/: __init__.py  exception.py  exceptions.py  lifespan.py  logging.py  middlewares.py  openapi.py  routers.py
src/event_sourcing/api/middlewares/: __init__.py  request_logger.py
src/event_sourcing/api/routers/: api_router.py  backfill.py  clients.py  events.py  users.py
src/event_sourcing/application/: __init__.py
src/event_sourcing/application/commands/: __init__.py  aggregate.py  backfill.py  base.py  crm.py  salesforce.py
src/event_sourcing/application/events/: __init__.py  event_handler.py
src/event_sourcing/application/projections/: __init__.py  base.py  client_projection.py  projection_manager.py  projection_manager_interface.py
src/event_sourcing/application/queries/: __init__.py  base.py
src/event_sourcing/application/services/: __init__.py  backfill.py  dependency_service.py  infrastructure.py
src/event_sourcing/application/tasks/: __init__.py  process_crm_event.py  process_projection.py  process_salesforce_event.py  publish_snapshot.py  reconstruct_aggregate.py  update_read_model.py
src/event_sourcing/cli/: __init__.py  __main__.py  create_admin.py  main.py
src/event_sourcing/cli/handlers/: __init__.py  exception.py
src/event_sourcing/cli/users/: __init__.py  create_admin.py
src/event_sourcing/config/: celery_app.py  settings.py
src/event_sourcing/domain/: __init__.py  exceptions.py
src/event_sourcing/domain/aggregates/: __init__.py  base.py  client.py  registry.py  salesforce.py  salesforce_mixin.py  user.py
src/event_sourcing/domain/events/: __init__.py  base.py  client.py
src/event_sourcing/domain/exceptions/: __init__.py  business.py  domain.py  resource.py  validation.py
src/event_sourcing/domain/mappings/: __init__.py  base.py  client.py  registry.py
src/event_sourcing/dto/: __init__.py  auth.py  base.py  client.py  event.py  salesforce.py  snapshot.py  user.py
src/event_sourcing/dto/events/: __init__.py  base.py  factory.py
src/event_sourcing/exceptions/: __init__.py  authentication.py  base.py  business.py  infrastructure.py  projection.py  resource.py  validation.py
src/event_sourcing/infrastructure/: README.md  __init__.py  enums.py  event_store.py  factory.py  messaging.py  provider.py  read_model.py
src/event_sourcing/infrastructure/database/: __init__.py  base.py  session.py
src/event_sourcing/infrastructure/event_store/: __init__.py  base.py  deserializer.py  psql.py
src/event_sourcing/infrastructure/factory/: __init__.py  command_handler_wrapper.py  infrastructure_factory.py  projection_wrapper.py  session_manager.py
src/event_sourcing/infrastructure/providers/: __init__.py
src/event_sourcing/infrastructure/read_model/: __init__.py  base.py  psql.py
src/event_sourcing/infrastructure/security/: __init__.py  auth_service.py  hashing_service.py  jwt_auth_service.py  permissions.py  provider.py
src/event_sourcing/infrastructure/snapshot_store/: __init__.py  base.py  dto.py  psql_store.py  psql_user_snapshot_store.py  snapshot.py
src/event_sourcing/infrastructure/unit_of_work/: __init__.py  base.py  psql.py
src/event_sourcing/tasks/: __init__.py  process_salesforce_event.py
src/event_sourcing/utils/: __init__.py  logging_decorators.py  sync_error_logger.py
tests/: conftest.py
tests/integration/infrastructure/: __init__.py  test_event_store_read_model_integration.py
tests/integration/infrastructure/event_store/: __init__.py  test_psql_event_store.py
tests/integration/infrastructure/read_model/: __init__.py  test_psql_read_model.py
tests/integration/infrastructure/snapshot_store/: __init__.py  test_psql_snapshot_store.py
tests/system/: README.md  test_users.py
tests/system/api/: test_ht.py  test_root.py
tests/system/cli/users/: test_create_admin.py
tests/unit/api/handlers/: test_api_exception.py
tests/unit/application/projections/: __init__.py
tests/unit/application/tasks/: test_user_created_email_task.py  test_user_created_task.py  test_user_deleted_task.py  test_user_updated_task.py
tests/unit/cli/handlers/: test_cli_exception.py
tests/unit/infrastructure/: test_factory.py  test_provider.py
tests/unit/tasks/: test_create_foo.py
(+192 files in other folders)
